# log_horizon_scrub

./: .gitignore  README.md  docker-compose.yml
lab01/: course_data.sql  create_tables.sql  datas.sql  department_data.sql  registration_data.sql  student_data.sql  tables.sql  tasks.sql  teacher_data.sql
lab02/: datas.sql  tables.sql  tasks.sql
lab03/: tasks.sql
project/: .gitignore  Cargo.toml  CheckList.md  README.md
project/res/: mock.sql  online_store.drawio  proc.sql  tables.sql
project/res/mock/: address.sql
project/src/: admin_service.rs  command.rs  common_service.rs  customer_service.rs  db.rs  hope.rs  main.rs  mock.rs  service.rs  tables.sql  tui.rs
