[package]
name = "hopestore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = { version = "0.19.4", features = ["with-chrono-0_4"] }
dotenv = "0.15.0"
chrono = "0.4.23"
rust_decimal = { version = "1.27.0", features = ["db-postgres" ] }
rust_decimal_macros = "1.27"